manifests/services-networking/np-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-true-ingress
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
  - from:
      - podSelector:
          matchLabels:
            "access": "true"
  policyTypes:
  - Ingress
